backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    argocd.argoproj.io/tracking-id: backend-app:apps/Deployment:default/backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 4moa/moa-be:0edd119
          ports:
            - containerPort: 8080
